Care must be taken with maps and tests.