@@ -1,6 +1,7 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.api.integration.entity;
 
+import com.google.common.collect.ImmutableMap;
 import com.yahoo.vespa.hosted.controller.api.identifiers.Property;
 import com.yahoo.vespa.hosted.controller.api.identifiers.PropertyId;
 
@@ -18,8 +19,8 @@ public class MemoryEntityService implements EntityService {
 
     @Override
     public Map<PropertyId, Property> listProperties() {
-        return Map.of(new PropertyId("1234"), new Property("foo"),
-                      new PropertyId("4321"), new Property("bar"));
+        return ImmutableMap.of(new PropertyId("1234"), new Property("foo"),
+                               new PropertyId("4321"), new Property("bar"));
     }
 
     @Override
